# dummy

./: CMakeLists.txt  cpptools.pc.in  cpptoolsConfig.cmake.in
docs/: environment.yml
docs/source/: basic_usage.rst  conf.py  index.rst
docs/source/mytheme/: theme.conf
docs/source/mytheme/static/: pygments.css_t
examples/: CMakeLists.txt  hello_world.cpp
include/cpptools/: cpptools.hpp  cpptools_config.hpp
python/: CMakeLists.txt
python/py/: __init__.py
python/src/: main.cpp  py_core.cpp
test/: CMakeLists.txt  test_cpptools_config.cpp
